ADDed a paragraphof text

--- a/helloWorld.html
+++ b/helloWorld.html
@@ -8,6 +8,7 @@
 </head>
 <body>
 <h1>Sitio Web Cool</h1>
- <p>Saludos people</p>   
+ <p>Saludos people</p>  
+ <p>Por favor no sufras</p> 
 </body>
 </html>
